@@ -1,18 +1,18 @@
 package io.quarkus.runner.bootstrap;
 
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -31,8 +31,10 @@ import io.quarkus.bootstrap.app.AugmentResult;
 import io.quarkus.bootstrap.app.ClassChangeInformation;
 import io.quarkus.bootstrap.app.CuratedApplication;
 import io.quarkus.bootstrap.app.QuarkusBootstrap;
+import io.quarkus.bootstrap.app.SbomResult;
 import io.quarkus.bootstrap.classloading.ClassLoaderEventListener;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
+import io.quarkus.bootstrap.util.PropertyUtils;
 import io.quarkus.builder.BuildChainBuilder;
 import io.quarkus.builder.BuildResult;
 import io.quarkus.builder.item.BuildItem;
@@ -49,10 +51,9 @@ import io.quarkus.deployment.pkg.builditem.BuildSystemTargetBuildItem;
 import io.quarkus.deployment.pkg.builditem.DeploymentResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.JarBuildItem;
 import io.quarkus.deployment.pkg.builditem.NativeImageBuildItem;
+import io.quarkus.deployment.sbom.SbomBuildItem;
 import io.quarkus.dev.spi.DevModeType;
 import io.quarkus.runtime.LaunchMode;
-import io.quarkus.runtime.configuration.ProfileManager;
-import io.quarkus.runtime.configuration.QuarkusConfigFactory;
 
 /**
  * The augmentation task that produces the application.
@@ -140,29 +141,30 @@ public class AugmentActionImpl implements AugmentAction {
 
     @Override
     public void performCustomBuild(String resultHandler, Object context, String... finalOutputs) {
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        Class<? extends BuildItem>[] targets = Arrays.stream(finalOutputs)
-                .map(new Function<String, Class<? extends BuildItem>>() {
-                    @Override
-                    public Class<? extends BuildItem> apply(String s) {
-                        try {
-                            return (Class<? extends BuildItem>) Class.forName(s, false, classLoader);
-                        } catch (ClassNotFoundException e) {
-                            throw new RuntimeException(e);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            Class<? extends BuildItem>[] targets = Arrays.stream(finalOutputs)
+                    .map(new Function<String, Class<? extends BuildItem>>() {
+                        @Override
+                        public Class<? extends BuildItem> apply(String s) {
+                            try {
+                                return (Class<? extends BuildItem>) Class.forName(s, false, classLoader);
+                            } catch (ClassNotFoundException e) {
+                                throw new RuntimeException(e);
+                            }
                         }
-                    }
-                }).toArray(Class[]::new);
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, targets);
+                    }).toArray(Class[]::new);
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, targets);
 
-        writeDebugSourceFile(result);
-        try {
-            BiConsumer<Object, BuildResult> consumer = (BiConsumer<Object, BuildResult>) Class
-                    .forName(resultHandler, false, classLoader)
-                    .getConstructor().newInstance();
-            consumer.accept(context, result);
-        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | ClassNotFoundException
-                | InvocationTargetException e) {
-            throw new RuntimeException(e);
+            writeDebugSourceFile(result);
+            try {
+                BiConsumer<Object, BuildResult> consumer = (BiConsumer<Object, BuildResult>) Class
+                        .forName(resultHandler, false, classLoader)
+                        .getConstructor().newInstance();
+                consumer.accept(context, result);
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | ClassNotFoundException
+                    | InvocationTargetException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -171,32 +173,49 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode != LaunchMode.NORMAL) {
             throw new IllegalStateException("Can only create a production application when using NORMAL launch mode");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, ArtifactResultBuildItem.class,
-                DeploymentResultBuildItem.class);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, ArtifactResultBuildItem.class,
+                    DeploymentResultBuildItem.class, SbomBuildItem.class);
 
-        writeDebugSourceFile(result);
+            writeDebugSourceFile(result);
 
-        JarBuildItem jarBuildItem = result.consumeOptional(JarBuildItem.class);
-        NativeImageBuildItem nativeImageBuildItem = result.consumeOptional(NativeImageBuildItem.class);
-        List<ArtifactResultBuildItem> artifactResultBuildItems = result.consumeMulti(ArtifactResultBuildItem.class);
-        BuildSystemTargetBuildItem buildSystemTargetBuildItem = result.consume(BuildSystemTargetBuildItem.class);
+            JarBuildItem jarBuildItem = result.consumeOptional(JarBuildItem.class);
+            NativeImageBuildItem nativeImageBuildItem = result.consumeOptional(NativeImageBuildItem.class);
+            List<ArtifactResultBuildItem> artifactResultBuildItems = result.consumeMulti(ArtifactResultBuildItem.class);
+            BuildSystemTargetBuildItem buildSystemTargetBuildItem = result.consume(BuildSystemTargetBuildItem.class);
+            Map<Path, List<SbomResult>> sboms = getSboms(result.consumeMulti(SbomBuildItem.class));
 
-        // this depends on the fact that the order in which we can obtain MultiBuildItems is the same as they are produced
-        // we want to write result of the final artifact created
-        ArtifactResultBuildItem lastResult = artifactResultBuildItems.get(artifactResultBuildItems.size() - 1);
-        writeArtifactResultMetadataFile(buildSystemTargetBuildItem, lastResult);
+            // this depends on the fact that the order in which we can obtain MultiBuildItems is the same as they are produced
+            // we want to write result of the final artifact created
+            if (artifactResultBuildItems.isEmpty()) {
+                throw new IllegalStateException("No artifact results were produced");
+            }
+            writeArtifactResultMetadataFile(buildSystemTargetBuildItem, artifactResultBuildItems);
 
-        return new AugmentResult(artifactResultBuildItems.stream()
-                .map(a -> new ArtifactResult(a.getPath(), a.getType(), a.getMetadata()))
-                .collect(Collectors.toList()),
-                jarBuildItem != null ? jarBuildItem.toJarResult() : null,
-                nativeImageBuildItem != null ? nativeImageBuildItem.getPath() : null,
-                nativeImageBuildItem != null ? nativeImageBuildItem.getGraalVMInfo().toMap() : Collections.emptyMap());
+            return new AugmentResult(artifactResultBuildItems.stream()
+                    .map(a -> new ArtifactResult(a.getPath(), a.getType(), a.getMetadata()))
+                    .collect(Collectors.toList()),
+                    jarBuildItem != null ? jarBuildItem.toJarResult(sboms.getOrDefault(jarBuildItem.getPath(), List.of()))
+                            : null,
+                    nativeImageBuildItem != null ? nativeImageBuildItem.getPath() : null,
+                    nativeImageBuildItem != null ? nativeImageBuildItem.getGraalVMInfo().toMap() : Map.of());
+        }
+    }
+
+    private Map<Path, List<SbomResult>> getSboms(List<SbomBuildItem> sbomBuildItems) {
+        if (sbomBuildItems.isEmpty()) {
+            return Map.of();
+        }
+        final Map<Path, List<SbomResult>> result = new HashMap<>();
+        for (var sbomBuildItem : sbomBuildItems) {
+            result.computeIfAbsent(sbomBuildItem.getResult().getApplicationRunner(), p -> new ArrayList<>())
+                    .add(sbomBuildItem.getResult());
+        }
+        return result;
     }
 
     private void writeDebugSourceFile(BuildResult result) {
-        String debugSourcesDir = BootstrapDebug.DEBUG_SOURCES_DIR;
+        String debugSourcesDir = BootstrapDebug.debugSourcesDir();
         if (debugSourcesDir != null) {
             for (GeneratedClassBuildItem i : result.consumeMulti(GeneratedClassBuildItem.class)) {
                 try {
@@ -221,26 +240,43 @@ public class AugmentActionImpl implements AugmentAction {
     }
 
     private void writeArtifactResultMetadataFile(BuildSystemTargetBuildItem outputTargetBuildItem,
-            ArtifactResultBuildItem lastResult) {
+            List<ArtifactResultBuildItem> artifactResultBuildItems) {
+        ArtifactResultBuildItem lastArtifact = artifactResultBuildItems.get(artifactResultBuildItems.size() - 1);
         Path quarkusArtifactMetadataPath = outputTargetBuildItem.getOutputDirectory().resolve("quarkus-artifact.properties");
         Properties properties = new Properties();
-        properties.put("type", lastResult.getType());
-        if (lastResult.getPath() != null) {
-            properties.put("path", outputTargetBuildItem.getOutputDirectory().relativize(lastResult.getPath()).toString());
-        }
-        Map<String, Object> metadata = lastResult.getMetadata();
-        if (metadata != null) {
-            for (Map.Entry<String, Object> entry : metadata.entrySet()) {
-                if (entry.getValue() instanceof String) {
-                    properties.put("metadata." + entry.getKey(), entry.getValue());
+        properties.put("type", lastArtifact.getType());
+        if (lastArtifact.getPath() != null) {
+            properties.put("path", artifactPathForResultMetadata(outputTargetBuildItem, lastArtifact));
+        } else {
+            if (lastArtifact.getType().endsWith("-container")) {
+                // in this case we write "path" as to contain the path to the artifact from which the container was built
+                try {
+                    ArtifactResultBuildItem baseArtifact = artifactResultBuildItems.get(artifactResultBuildItems.size() - 2);
+                    if (baseArtifact.getPath() != null) {
+                        properties.put("path", artifactPathForResultMetadata(outputTargetBuildItem, baseArtifact));
+                    }
+                } catch (IndexOutOfBoundsException e) {
+                    // this should never happen really as a container is always built from some other artifact
+                    log.debug(e);
                 }
             }
         }
-        try (FileOutputStream fos = new FileOutputStream(quarkusArtifactMetadataPath.toFile())) {
-            properties.store(fos, "Generated by Quarkus - Do not edit manually");
+        Map<String, String> metadata = lastArtifact.getMetadata();
+        if (metadata != null) {
+            for (Map.Entry<String, String> entry : metadata.entrySet()) {
+                properties.put("metadata." + entry.getKey(), entry.getValue());
+            }
+        }
+        try {
+            PropertyUtils.store(properties, quarkusArtifactMetadataPath, "Generated by Quarkus - Do not edit manually");
         } catch (IOException e) {
             log.debug("Unable to write artifact result metadata file", e);
         }
+    }
+
+    private static String artifactPathForResultMetadata(BuildSystemTargetBuildItem outputTargetBuildItem,
+            ArtifactResultBuildItem artifactResultBuildItem) {
+        return outputTargetBuildItem.getOutputDirectory().relativize(artifactResultBuildItem.getPath()).toString();
     }
 
     @Override
@@ -248,10 +284,11 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode == LaunchMode.NORMAL) {
             throw new IllegalStateException("Cannot launch a runtime application with NORMAL launch mode");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
-        @SuppressWarnings("unchecked")
-        BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, NON_NORMAL_MODE_OUTPUTS);
-        return new StartupActionImpl(curatedApplication, result);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            @SuppressWarnings("unchecked")
+            BuildResult result = runAugment(true, Collections.emptySet(), null, classLoader, NON_NORMAL_MODE_OUTPUTS);
+            return new StartupActionImpl(curatedApplication, result);
+        }
     }
 
     @Override
@@ -260,13 +297,14 @@ public class AugmentActionImpl implements AugmentAction {
         if (launchMode != LaunchMode.DEVELOPMENT) {
             throw new IllegalStateException("Only application with launch mode DEVELOPMENT can restart");
         }
-        ClassLoader classLoader = curatedApplication.createDeploymentClassLoader();
 
-        @SuppressWarnings("unchecked")
-        BuildResult result = runAugment(!hasStartedSuccessfully, changedResources, classChangeInformation, classLoader,
-                NON_NORMAL_MODE_OUTPUTS);
+        try (QuarkusClassLoader classLoader = curatedApplication.createDeploymentClassLoader()) {
+            @SuppressWarnings("unchecked")
+            BuildResult result = runAugment(!hasStartedSuccessfully, changedResources, classChangeInformation, classLoader,
+                    NON_NORMAL_MODE_OUTPUTS);
 
-        return new StartupActionImpl(curatedApplication, result);
+            return new StartupActionImpl(curatedApplication, result);
+        }
     }
 
     private BuildResult runAugment(boolean firstRun, Set<String> changedResources,
@@ -274,13 +312,9 @@ public class AugmentActionImpl implements AugmentAction {
             Class<? extends BuildItem>... finalOutputs) {
         ClassLoader old = Thread.currentThread().getContextClassLoader();
         try {
-            QuarkusClassLoader classLoader = curatedApplication.getAugmentClassLoader();
+            QuarkusClassLoader classLoader = curatedApplication.getOrCreateAugmentClassLoader();
             Thread.currentThread().setContextClassLoader(classLoader);
-            ProfileManager.setLaunchMode(launchMode);
-            ProfileManager.setRuntimeDefaultProfile(
-                    Optional.ofNullable(quarkusBootstrap.getBuildSystemProperties())
-                            .map(properties -> properties.getProperty(ProfileManager.QUARKUS_PROFILE_PROP))
-                            .orElse(null));
+            LaunchMode.set(launchMode);
 
             QuarkusAugmentor.Builder builder = QuarkusAugmentor.builder()
                     .setRoot(quarkusBootstrap.getApplicationRoot())
@@ -288,7 +322,9 @@ public class AugmentActionImpl implements AugmentAction {
                     .setTargetDir(quarkusBootstrap.getTargetDirectory())
                     .setDeploymentClassLoader(deploymentClassLoader)
                     .setBuildSystemProperties(quarkusBootstrap.getBuildSystemProperties())
-                    .setEffectiveModel(curatedApplication.getApplicationModel());
+                    .setRuntimeProperties(quarkusBootstrap.getRuntimeProperties())
+                    .setEffectiveModel(curatedApplication.getApplicationModel())
+                    .setDependencyInfoProvider(quarkusBootstrap.getDependencyInfoProvider());
             if (quarkusBootstrap.getBaseName() != null) {
                 builder.setBaseName(quarkusBootstrap.getBaseName());
             }
@@ -336,9 +372,8 @@ public class AugmentActionImpl implements AugmentAction {
                 throw new RuntimeException(e);
             }
         } finally {
-            ProfileManager.setRuntimeDefaultProfile(null);
             Thread.currentThread().setContextClassLoader(old);
-            QuarkusConfigFactory.setConfig(null);
+            //QuarkusConfigFactory.setConfig(null);
         }
     }
 
