@@ -1,6 +1,8 @@
 package io.quarkus.maven;
 
 import static io.quarkus.analytics.dto.segment.TrackEventType.DEV_MODE;
+import static io.quarkus.maven.QuarkusBootstrapMojo.CLOSE_BOOTSTRAPPED_APP_PARAM;
+import static io.quarkus.maven.QuarkusBootstrapMojo.MODE_PARAM;
 import static io.smallrye.common.expression.Expression.Flag.LENIENT_SYNTAX;
 import static io.smallrye.common.expression.Expression.Flag.NO_TRIM;
 import static java.util.Collections.emptyMap;
@@ -30,6 +32,7 @@ import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Scanner;
@@ -43,9 +46,12 @@ import org.aesh.terminal.Attributes;
 import org.aesh.terminal.utils.ANSI;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.maven.artifact.Artifact;
+import org.apache.maven.artifact.handler.ArtifactHandler;
+import org.apache.maven.artifact.handler.manager.ArtifactHandlerManager;
 import org.apache.maven.execution.MavenSession;
 import org.apache.maven.model.BuildBase;
 import org.apache.maven.model.Dependency;
+import org.apache.maven.model.DependencyManagement;
 import org.apache.maven.model.Plugin;
 import org.apache.maven.model.PluginExecution;
 import org.apache.maven.model.Profile;
@@ -55,6 +61,7 @@ import org.apache.maven.plugin.BuildPluginManager;
 import org.apache.maven.plugin.MojoExecution;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
+import org.apache.maven.plugin.PluginParameterExpressionEvaluator;
 import org.apache.maven.plugin.descriptor.MojoDescriptor;
 import org.apache.maven.plugin.descriptor.PluginDescriptor;
 import org.apache.maven.plugin.logging.Log;
@@ -67,6 +74,8 @@ import org.apache.maven.project.MavenProject;
 import org.apache.maven.shared.utils.cli.CommandLineUtils;
 import org.apache.maven.toolchain.Toolchain;
 import org.apache.maven.toolchain.ToolchainManager;
+import org.codehaus.plexus.component.configurator.expression.ExpressionEvaluationException;
+import org.codehaus.plexus.component.configurator.expression.ExpressionEvaluator;
 import org.codehaus.plexus.util.xml.Xpp3Dom;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.RepositorySystemSession;
@@ -93,14 +102,16 @@ import io.quarkus.bootstrap.model.PathsCollection;
 import io.quarkus.bootstrap.resolver.BootstrapAppModelResolver;
 import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
 import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContextConfig;
+import io.quarkus.bootstrap.resolver.maven.BootstrapMavenException;
 import io.quarkus.bootstrap.resolver.maven.MavenArtifactResolver;
 import io.quarkus.bootstrap.util.BootstrapUtils;
 import io.quarkus.bootstrap.workspace.ArtifactSources;
 import io.quarkus.bootstrap.workspace.SourceDir;
+import io.quarkus.deployment.dev.DevModeCommandLine;
+import io.quarkus.deployment.dev.DevModeCommandLineBuilder;
 import io.quarkus.deployment.dev.DevModeContext;
 import io.quarkus.deployment.dev.DevModeMain;
-import io.quarkus.deployment.dev.QuarkusDevModeLauncher;
-import io.quarkus.maven.MavenDevModeLauncher.Builder;
+import io.quarkus.deployment.dev.ExtensionDevModeJvmOptionFilter;
 import io.quarkus.maven.components.CompilerOptions;
 import io.quarkus.maven.components.MavenVersionEnforcer;
 import io.quarkus.maven.components.QuarkusWorkspaceProvider;
@@ -145,15 +156,11 @@ public class DevMojo extends AbstractMojo {
     private static final String ORG_APACHE_MAVEN_PLUGINS = "org.apache.maven.plugins";
     private static final String MAVEN_COMPILER_PLUGIN = "maven-compiler-plugin";
     private static final String MAVEN_RESOURCES_PLUGIN = "maven-resources-plugin";
+    private static final String MAVEN_SUREFIRE_PLUGIN = "maven-surefire-plugin";
     private static final String MAVEN_TOOLCHAINS_PLUGIN = "maven-toolchains-plugin";
 
     private static final String ORG_JETBRAINS_KOTLIN = "org.jetbrains.kotlin";
     private static final String KOTLIN_MAVEN_PLUGIN = "kotlin-maven-plugin";
-
-    private static final String IO_SMALLRYE = "io.smallrye";
-    private static final String ORG_JBOSS_JANDEX = "org.jboss.jandex";
-    private static final String JANDEX_MAVEN_PLUGIN = "jandex-maven-plugin";
-    private static final String JANDEX = "jandex";
 
     private static final String BOOTSTRAP_ID = "DevMojo";
 
@@ -246,6 +253,10 @@ public class DevMojo extends AbstractMojo {
     @Parameter
     private File workingDir;
 
+    /**
+     * Allows configuring arbitrary JVM arguments. Multiple arguments can be specified by delimiting them with a space
+     * character.
+     */
     @Parameter(defaultValue = "${jvm.args}")
     private String jvmArgs;
 
@@ -258,6 +269,22 @@ public class DevMojo extends AbstractMojo {
     @Parameter
     private Map<String, String> systemProperties = Map.of();
 
+    /**
+     * When enabled, the {@code <environmentVariables>} and {@code <systemPropertyVariables>}
+     * elements of the Maven Surefire plugin are copied to environment variables and system
+     * properties defined by this plugin. Note that no other Surefire configuration is used
+     * (notably {@code <systemProperties>}), only the 2 elements mentioned above.
+     * <p>
+     * This plugin's {@code <environmentVariables>} and {@code <systemProperties>} have
+     * priority, so duplicate keys are not copied.
+     * <p>
+     * Since environment variables and system properties are global to the entire process,
+     * this also affects dev mode (when executed as {@code quarkus:dev}). Because of that,
+     * this copying action is disabled by default and requires opt-in.
+     */
+    @Parameter(defaultValue = "false")
+    private boolean copySurefireVariables;
+
     @Parameter(defaultValue = "${session}")
     private MavenSession session;
 
@@ -266,6 +293,9 @@ public class DevMojo extends AbstractMojo {
 
     @Component
     private MavenVersionEnforcer mavenVersionEnforcer;
+
+    @Component
+    private ArtifactHandlerManager artifactHandlerManager;
 
     @Component
     private RepositorySystem repoSystem;
@@ -283,11 +313,13 @@ public class DevMojo extends AbstractMojo {
     private List<RemoteRepository> pluginRepos;
 
     /**
-     * This value is intended to be set to true when some generated bytecode
-     * is erroneous causing the JVM to crash when the <code>verify:none</code> option is set (which is on by default)
+     * This value is intended to be set to true when we want to require C2 compilation instead of preventing it from
+     * ever kicking in.
+     * Setting this will likely have a small negative effect on startup time and should only be done when it absolutely
+     * makes sense.
      */
-    @Parameter(defaultValue = "${preventnoverify}")
-    private boolean preventnoverify = false;
+    @Parameter(property = "forceC2")
+    private Boolean forceC2;
 
     /**
      * Whether changes in the projects that appear to be dependencies of the project containing the application to be launched
@@ -336,6 +368,9 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${quarkus.enforceBuildGoal}")
     private boolean enforceBuildGoal = true;
 
+    @Parameter(property = "quarkus.warnIfBuildGoalMissing")
+    boolean warnIfBuildGoalMissing = true;
+
     @Component
     private WorkspaceReader wsReader;
 
@@ -355,6 +390,77 @@ public class DevMojo extends AbstractMojo {
 
     @Component
     BuildAnalyticsProvider analyticsProvider;
+
+    /**
+     * A comma-separated list of Maven plugin keys in {@code groupId:artifactId} format
+     * (for example {@code org.codehaus.mojo:flatten-maven-plugin} and/or goal prefixes,
+     * (for example {@code flatten}) that should be skipped when {@code quarkus:dev} identifies
+     * Maven plugin goals that should be executed before the application is launched in dev mode.
+     * <p>
+     * Only the {@code flatten} Maven plugin is skipped by default.
+     */
+    @Parameter(defaultValue = "org.codehaus.mojo:flatten-maven-plugin")
+    Set<String> skipPlugins;
+
+    /**
+     * Extension dev mode JVM option filter configuration.
+     * <p>
+     * Allows disabling all JVM options configured by extensions, for example
+     *
+     * <pre>{@code
+     *     <extensionJvmOptions>
+     *         <!-- disable JVM options from all the extensions -->
+     *         <disableAll>true</disableAll>
+     *     </extensionJvmOptions>*
+     * }</pre>
+     *
+     * or specifying a {@code groupId:artifactId:classifier} artifact pattern
+     * to disable options provided by the matching subset of extensions, for example
+     *
+     * <pre>{@code
+     *     <extensionJvmOptions>
+     *         <disableFor>
+     *             <!-- disable JVM options from all the extensions with groupId org.acme -->
+     *             <extension>org.acme</extension>
+     *             <!-- disable JVM options configured by io.quarkiverse:quarkus-magic -->
+     *             <extension>io.quarkiverse:quarkus-magic</extension>
+     *         </disableFor>
+     *     </extensionJvmOptions>
+     * }</pre>
+     */
+    @Parameter
+    ExtensionDevModeJvmOptionFilter extensionJvmOptions;
+
+    /**
+     * Selects given test(s) for continuous testing. This is an alternative to {@code quarkus.test.include-pattern}
+     * and {@code quarkus.test.exclude-pattern}; if set, the {@code quarkus.test.[include|exclude]-pattern} configuration
+     * is ignored.
+     * <p>
+     * The format of this configuration property is the same as the Maven Surefire {@code -Dtest=...}
+     * <a href="https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#test">format</a>.
+     * Specifically: it is a comma ({@code ,}) separated list of globs of class file paths and/or
+     * method names. Each glob can potentially be prefixed with an exclamation mark ({@code !}), which makes
+     * it an exclusion filter instead of an inclusion filter. Exclusions have higher priority than inclusions.
+     * The class file path glob is separated from the method name glob by the hash sign ({@code #}) and multiple
+     * method name globs may be present, separated by the plus sign ({@code +}).
+     * <p>
+     * For example:
+     * <ul>
+     * <li>{@code Basic*}: all classes starting with {@code Basic}</li>
+     * <li>{@code ???Test}: all classes named with 3 arbitrary characters followed by {@code Test}</li>
+     * <li>{@code !Unstable*}: all classes except classes starting with {@code Unstable}</li>
+     * <li>{@code pkg/**}{@code /Ci*leTest}: all classes in the package {@code pkg} and subpackages, starting
+     * with {@code Ci} and ending with {@code leTest}</li>
+     * <li>{@code *Test#test*One+testTwo?????}: all classes ending with {@code Test}, and in them, only methods
+     * starting with {@code test} and ending with {@code One}, or starting with {@code testTwo} and followed
+     * by 5 arbitrary characters</li>
+     * <li>{@code #fast*+slowTest}: all classes, and in them, only methods starting with {@code fast} or methods
+     * named {@code slowTest}</li>
+     * </ul>
+     * Note that the syntax {@code %regex[...]} and {@code %ant[...]} is <em>NOT</em> supported.
+     */
+    @Parameter(property = "test")
+    String test;
 
     /**
      * console attributes, used to restore the console state
@@ -399,13 +505,18 @@ public class DevMojo extends AbstractMojo {
             final PluginDescriptor pluginDescr = getPluginDescriptor();
             final Plugin pluginDef = getConfiguredPluginOrNull(pluginDescr.getGroupId(), pluginDescr.getArtifactId());
             if (!isGoalConfigured(pluginDef, "build")) {
-                var currentGoal = getCurrentGoal();
-                getLog().warn(
-                        "The quarkus-maven-plugin build goal was not configured for this project, skipping " +
-                                currentGoal + " as this is assumed to be a support library. If you want to run " + currentGoal +
-                                " on this project make sure the quarkus-maven-plugin is configured with the build goal" +
-                                " or disable the enforceBuildGoal flag (via plugin configuration or via" +
-                                " -Dquarkus.enforceBuildGoal=false).");
+                if (warnIfBuildGoalMissing) {
+                    var currentGoal = getCurrentGoal();
+                    getLog().warn(
+                            "Skipping " + currentGoal + " as this is assumed to be a support library." +
+                                    " To disable this warning set warnIfBuildGoalMissing parameter to false."
+                                    + System.lineSeparator() +
+                                    "To enable " + currentGoal +
+                                    " for this module, make sure the quarkus-maven-plugin configuration includes the build goal"
+                                    +
+                                    " or disable the enforceBuildGoal flag (via plugin configuration or via" +
+                                    " -Dquarkus.enforceBuildGoal=false).");
+                }
                 return;
             }
         }
@@ -422,10 +533,12 @@ public class DevMojo extends AbstractMojo {
             })) {
                 return scanner.nextLine();
             } catch (Exception e) {
-                getLog().warn("Failed to collect user input for analytics", e);
+                getLog().debug("Failed to collect user input for analytics", e);
                 return "";
             }
         });
+
+        copySurefireVariables();
 
         try {
             DevModeRunner runner = new DevModeRunner(bootstrapId);
@@ -446,25 +559,33 @@ public class DevMojo extends AbstractMojo {
                         }
                         return;
                     }
-                    final Set<Path> changed = new HashSet<>();
+                    List<String> changedPoms = List.of();
                     for (Map.Entry<Path, Long> e : pomFiles.entrySet()) {
                         long t = Files.getLastModifiedTime(e.getKey()).toMillis();
                         if (t > e.getValue()) {
-                            changed.add(e.getKey());
+                            if (changedPoms.isEmpty()) {
+                                // unless it's a git or some other command, there won't be many POMs modified in 100 milliseconds
+                                changedPoms = new ArrayList<>(1);
+                            }
+                            changedPoms.add(e.getKey().toString());
                             pomFiles.put(e.getKey(), t);
                         }
                     }
-                    if (!changed.isEmpty()) {
-                        getLog().info("Changes detected to " + changed + ", restarting dev mode");
+                    if (!changedPoms.isEmpty()) {
+                        logPomChanges(changedPoms);
+
+                        // stop the runner before we build the new one as the debug port being free
+                        // is tested when building the runner
+                        runner.stop();
+
                         final DevModeRunner newRunner;
                         try {
-                            bootstrapId = handleAutoCompile();
-                            newRunner = new DevModeRunner(runner.launcher.getDebugPortOk(), bootstrapId);
+                            bootstrapId = handleAutoCompile(changedPoms);
+                            newRunner = new DevModeRunner(runner.commandLine.getDebugPort(), bootstrapId);
                         } catch (Exception e) {
-                            getLog().info("Could not load changed pom.xml file, changes not applied", e);
+                            getLog().info("Could not load changedPoms pom.xml file, changes not applied", e);
                             continue;
                         }
-                        runner.stop();
                         newRunner.run();
                         runner = newRunner;
                     }
@@ -473,6 +594,15 @@ public class DevMojo extends AbstractMojo {
         } catch (Exception e) {
             throw new MojoFailureException("Failed to run", e);
         }
+    }
+
+    private void logPomChanges(List<String> changedPoms) {
+        final StringBuilder sb = new StringBuilder().append("Restarting dev mode following changes in ");
+        sb.append(changedPoms.get(0));
+        for (int i = 1; i < changedPoms.size(); ++i) {
+            sb.append(", ").append(changedPoms.get(i));
+        }
+        getLog().info(sb.toString());
     }
 
     /**
@@ -534,7 +664,18 @@ public class DevMojo extends AbstractMojo {
     }
 
     private String handleAutoCompile() throws MojoExecutionException {
+        return handleAutoCompile(List.of());
+    }
 
+    /**
+     * Invokes Maven project goals that are meant to be executed before quarkus:dev,
+     * unless they have already been executed.
+     *
+     * @param reloadPoms a list of POM files that should be reloaded from disk instead of read from the reactor
+     * @return bootstrap id
+     * @throws MojoExecutionException in case of an error
+     */
+    private String handleAutoCompile(List<String> reloadPoms) throws MojoExecutionException {
         List<String> goals = session.getGoals();
         // check for default goal(s) if none were specified explicitly,
         // see also org.apache.maven.lifecycle.internal.DefaultLifecycleTaskSegmentCalculator
@@ -571,11 +712,32 @@ public class DevMojo extends AbstractMojo {
             if (p.getExecutions().isEmpty()) {
                 continue;
             }
+            if (skipPlugins.contains(p.getKey())) {
+                if (getLog().isDebugEnabled()) {
+                    getLog().debug("Skipping " + p.getId() + " execution according to skipPlugins value");
+                }
+                continue;
+            }
             for (PluginExecution e : p.getExecutions()) {
+                if (e.getPhase() != null && !PRE_DEV_MODE_PHASES.contains(e.getPhase())) {
+                    // skip executions with phases post quarkus:dev, such as install, deploy, site, etc
+                    if (getLog().isDebugEnabled()) {
+                        getLog().debug("Skipping " + e.getId() + " of " + p.getId());
+                    }
+                    continue;
+                }
                 String goalPrefix = null;
                 if (!e.getGoals().isEmpty()) {
                     goalPrefix = getMojoDescriptor(p, e.getGoals().get(0)).getPluginDescriptor().getGoalPrefix();
+                    if (skipPlugins.contains(goalPrefix)) {
+                        if (getLog().isDebugEnabled()) {
+                            getLog().debug("Skipping " + goalPrefix + " execution according to skipPlugins value");
+                            continue;
+                        }
+                        continue;
+                    }
                     pluginPrefixes.put(goalPrefix, p);
+                    pluginPrefixes.put(p.getId(), p);
                 }
                 if (e.getPhase() != null) {
                     phaseExecutions.computeIfAbsent(e.getPhase(), k -> new ArrayList<>()).add(new PluginExec(p, goalPrefix, e));
@@ -614,7 +776,7 @@ public class DevMojo extends AbstractMojo {
             if (goal.endsWith(currentGoal)) {
                 break;
             }
-            var colon = goal.indexOf(':');
+            var colon = goal.lastIndexOf(':');
             if (colon >= 0) {
                 var plugin = pluginPrefixes.get(goal.substring(0, colon));
                 if (plugin == null) {
@@ -625,10 +787,7 @@ public class DevMojo extends AbstractMojo {
             }
         }
 
-        final Map<String, String> quarkusGoalParams = Map.of(
-                "mode", LaunchMode.DEVELOPMENT.name(),
-                QuarkusBootstrapMojo.CLOSE_BOOTSTRAPPED_APP, "false",
-                "bootstrapId", bootstrapId);
+        Map<String, String> quarkusGoalParams = null;
         for (int phaseIndex = latestHandledPhaseIndex + 1; phaseIndex < PRE_DEV_MODE_PHASES.size(); ++phaseIndex) {
             var executions = phaseExecutions.get(PRE_DEV_MODE_PHASES.get(phaseIndex));
             if (executions == null) {
@@ -638,6 +797,9 @@ public class DevMojo extends AbstractMojo {
                 var executedGoals = executedPluginGoals.getOrDefault(pe.plugin.getId(), List.of());
                 for (String goal : pe.execution.getGoals()) {
                     if (!executedGoals.contains(goal)) {
+                        if (quarkusGoalParams == null) {
+                            quarkusGoalParams = getQuarkusGoalParams(bootstrapId, reloadPoms);
+                        }
                         try {
                             executeGoal(pe, goal,
                                     pe.getPluginId().equals(quarkusPluginId) ? quarkusGoalParams : Map.of());
@@ -655,6 +817,35 @@ public class DevMojo extends AbstractMojo {
             }
         }
         return bootstrapId;
+    }
+
+    /**
+     * Returns a map of parameters for the Quarkus plugin goals to be invoked.
+     *
+     * @param bootstrapId bootstrap id
+     * @param reloadPoms POM files to be reloaded from disk instead of taken from the reactor
+     * @return map of parameters for the Quarkus plugin goals
+     */
+    private static Map<String, String> getQuarkusGoalParams(String bootstrapId, List<String> reloadPoms) {
+        final Map<String, String> result = new HashMap<>(4);
+        result.put(QuarkusBootstrapMojo.MODE_PARAM, LaunchMode.DEVELOPMENT.name());
+        result.put(QuarkusBootstrapMojo.CLOSE_BOOTSTRAPPED_APP_PARAM, "false");
+        result.put(QuarkusBootstrapMojo.BOOTSTRAP_ID_PARAM, bootstrapId);
+        if (reloadPoms != null && !reloadPoms.isEmpty()) {
+            String reloadPomsStr;
+            if (reloadPoms.size() == 1) {
+                reloadPomsStr = reloadPoms.get(0);
+            } else {
+                final StringBuilder sb = new StringBuilder();
+                sb.append(reloadPoms.get(0));
+                for (int i = 1; i < reloadPoms.size(); ++i) {
+                    sb.append(",").append(reloadPoms.get(i));
+                }
+                reloadPomsStr = sb.toString();
+            }
+            result.put(QuarkusBootstrapMojo.RELOAD_POMS_PARAM, reloadPomsStr);
+        }
+        return result;
     }
 
     private String getCurrentGoal() {
@@ -693,11 +884,154 @@ public class DevMojo extends AbstractMojo {
                         version(pluginExec.plugin.getVersion()),
                         pluginExec.plugin.getDependencies()),
                 goal(goal),
-                getPluginConfig(pluginExec.plugin, goal, params),
+                getPluginConfig(pluginExec.plugin, pluginExec.getExecutionId(), goal, params),
                 executionEnvironment(
                         project,
                         session,
                         pluginManager));
+    }
+
+    private List<String> readAnnotationProcessors(Xpp3Dom pluginConfig) {
+        if (pluginConfig == null) {
+            return List.of();
+        }
+        Xpp3Dom annotationProcessors = pluginConfig.getChild("annotationProcessors");
+        if (annotationProcessors == null) {
+            return List.of();
+        }
+        Xpp3Dom[] processors = annotationProcessors.getChildren("annotationProcessor");
+        if (processors.length == 0) {
+            return List.of();
+        }
+        List<String> ret = new ArrayList<>(processors.length);
+        for (Xpp3Dom processor : processors) {
+            ret.add(processor.getValue());
+        }
+        return ret;
+    }
+
+    private Set<File> readAnnotationProcessorPaths(Xpp3Dom pluginConfig) throws MojoExecutionException {
+        if (pluginConfig == null) {
+            return Set.of();
+        }
+        Xpp3Dom annotationProcessorPaths = pluginConfig.getChild("annotationProcessorPaths");
+        if (annotationProcessorPaths == null) {
+            return Set.of();
+        }
+        var versionConstraints = getAnnotationProcessorPathsDepMgmt(pluginConfig);
+        Xpp3Dom[] paths = annotationProcessorPaths.getChildren("path");
+        Set<File> elements = new LinkedHashSet<>();
+        try {
+            List<org.eclipse.aether.graph.Dependency> dependencies = convertToDependencies(paths);
+            CollectRequest collectRequest = new CollectRequest(dependencies, versionConstraints,
+                    project.getRemoteProjectRepositories());
+            DependencyRequest dependencyRequest = new DependencyRequest();
+            dependencyRequest.setCollectRequest(collectRequest);
+            DependencyResult dependencyResult = repoSystem.resolveDependencies(session.getRepositorySession(),
+                    dependencyRequest);
+
+            for (ArtifactResult resolved : dependencyResult.getArtifactResults()) {
+                elements.add(resolved.getArtifact().getFile());
+            }
+            return elements;
+        } catch (Exception e) {
+            throw new MojoExecutionException(
+                    "Resolution of annotationProcessorPath dependencies failed: " + e.getLocalizedMessage(), e);
+        }
+    }
+
+    private List<org.eclipse.aether.graph.Dependency> getAnnotationProcessorPathsDepMgmt(Xpp3Dom pluginConfig) {
+        final Xpp3Dom useDepMgmt = pluginConfig.getChild("annotationProcessorPathsUseDepMgmt");
+        if (useDepMgmt == null || !Boolean.parseBoolean(useDepMgmt.getValue())) {
+            return List.of();
+        }
+        var dm = project.getDependencyManagement();
+        if (dm == null) {
+            return List.of();
+        }
+        return getProjectAetherDependencyManagement();
+    }
+
+    private List<org.eclipse.aether.graph.Dependency> convertToDependencies(Xpp3Dom[] paths) throws MojoExecutionException {
+        List<org.eclipse.aether.graph.Dependency> dependencies = new ArrayList<>();
+        for (Xpp3Dom path : paths) {
+            String type = getValue(path, "type", "jar");
+            ArtifactHandler handler = artifactHandlerManager.getArtifactHandler(type);
+            // WATCH OUT: this constructor turns any null values into empty strings
+            org.eclipse.aether.artifact.Artifact artifact = new DefaultArtifact(
+                    getValue(path, "groupId", null),
+                    getValue(path, "artifactId", null),
+                    getValue(path, "classifier", null),
+                    handler.getExtension(),
+                    getValue(path, "version", null));
+            if (toNullIfEmpty(artifact.getVersion()) == null) {
+                artifact = artifact.setVersion(getAnnotationProcessorPathVersion(artifact));
+            }
+            Set<org.eclipse.aether.graph.Exclusion> exclusions = convertToAetherExclusions(path.getChild("exclusions"));
+            dependencies.add(new org.eclipse.aether.graph.Dependency(artifact, JavaScopes.RUNTIME, false, exclusions));
+        }
+        return dependencies;
+    }
+
+    private String getAnnotationProcessorPathVersion(org.eclipse.aether.artifact.Artifact annotationProcessorPath)
+            throws MojoExecutionException {
+        List<Dependency> managedDependencies = getProjectManagedDependencies();
+        return findManagedVersion(annotationProcessorPath, managedDependencies)
+                .orElseThrow(() -> new MojoExecutionException(String.format(
+                        "Cannot find version for annotation processor path '%s'. The version needs to be either"
+                                + " provided directly in the plugin configuration or via dependency management.",
+                        annotationProcessorPath)));
+    }
+
+    private Optional<String> findManagedVersion(
+            org.eclipse.aether.artifact.Artifact artifact, List<Dependency> managedDependencies) {
+        // here, Dependency uses null, while artifact uses empty strings
+        return managedDependencies.stream()
+                .filter(dep -> Objects.equals(dep.getGroupId(), artifact.getGroupId())
+                        && Objects.equals(dep.getArtifactId(), artifact.getArtifactId())
+                        && Objects.equals(dep.getClassifier(), toNullIfEmpty(artifact.getClassifier()))
+                        && Objects.equals(dep.getType(), toNullIfEmpty(artifact.getExtension())))
+                .findAny()
+                .map(org.apache.maven.model.Dependency::getVersion);
+    }
+
+    private String toNullIfEmpty(String value) {
+        if (value != null && value.isBlank())
+            return null;
+        return value;
+    }
+
+    private List<Dependency> getProjectManagedDependencies() {
+        DependencyManagement dependencyManagement = project.getDependencyManagement();
+        if (dependencyManagement == null || dependencyManagement.getDependencies() == null) {
+            return List.of();
+        }
+        return dependencyManagement.getDependencies();
+    }
+
+    private String getValue(Xpp3Dom path, String element, String defaultValue) {
+        Xpp3Dom child = path.getChild(element);
+        // don't bother filtering empty strings or null values, DefaultArtifact will turn nulls into empty strings
+        if (child == null) {
+            return defaultValue;
+        }
+        return child.getValue();
+    }
+
+    private Set<org.eclipse.aether.graph.Exclusion> convertToAetherExclusions(Xpp3Dom exclusions) {
+        if (exclusions == null) {
+            return Set.of();
+        }
+        Set<Exclusion> aetherExclusions = new HashSet<>();
+        for (Xpp3Dom exclusion : exclusions.getChildren("exclusion")) {
+            Exclusion aetherExclusion = new Exclusion(
+                    getValue(exclusion, "groupId", null),
+                    getValue(exclusion, "artifactId", null),
+                    getValue(exclusion, "classifier", null),
+                    getValue(exclusion, "extension", "jar"));
+            aetherExclusions.add(aetherExclusion);
+        }
+        return aetherExclusions;
     }
 
     private boolean isGoalConfigured(Plugin plugin, String goal) {
@@ -712,18 +1046,20 @@ public class DevMojo extends AbstractMojo {
         return false;
     }
 
-    private Xpp3Dom getPluginConfig(Plugin plugin, String goal, Map<String, String> params) throws MojoExecutionException {
+    private Xpp3Dom getPluginConfig(Plugin plugin, String executionId, String goal, Map<String, String> params)
+            throws MojoExecutionException {
         Xpp3Dom mergedConfig = null;
         if (!plugin.getExecutions().isEmpty()) {
             for (PluginExecution exec : plugin.getExecutions()) {
-                if (exec.getConfiguration() != null && exec.getGoals().contains(goal)) {
+                if (exec.getConfiguration() != null && exec.getGoals().contains(goal)
+                        && matchesExecution(executionId, exec.getId())) {
                     mergedConfig = mergedConfig == null ? (Xpp3Dom) exec.getConfiguration()
                             : Xpp3Dom.mergeXpp3Dom(mergedConfig, (Xpp3Dom) exec.getConfiguration(), true);
                 }
             }
         }
 
-        if ((Xpp3Dom) plugin.getConfiguration() != null) {
+        if (plugin.getConfiguration() != null) {
             mergedConfig = mergedConfig == null ? (Xpp3Dom) plugin.getConfiguration()
                     : Xpp3Dom.mergeXpp3Dom(mergedConfig, (Xpp3Dom) plugin.getConfiguration(), true);
         }
@@ -752,6 +1088,27 @@ public class DevMojo extends AbstractMojo {
         }
 
         return configuration;
+    }
+
+    /**
+     * Check if the <code>currentExecutionId</code> matches the provided <code>executionId</code>.
+     * <p>
+     * This method will return <code>true</code> if
+     * <ul>
+     * <li>current execution id is undefined</li>
+     * <li>execution id is undefined</li>
+     * <li>both equals (ignoring case)</li>
+     * </ul>
+     *
+     * @param currentExecutionId current execution id (if defined)
+     * @param executionId execution id to test matching (if defined)
+     * @return <code>true</code> if executions ids do match.
+     */
+    private static boolean matchesExecution(String currentExecutionId, String executionId) {
+        if (currentExecutionId == null) {
+            return true;
+        }
+        return executionId == null || currentExecutionId.equalsIgnoreCase(executionId);
     }
 
     private MojoDescriptor getMojoDescriptor(Plugin plugin, String goal) throws MojoExecutionException {
@@ -790,7 +1147,7 @@ public class DevMojo extends AbstractMojo {
         return null;
     }
 
-    private void addProject(MavenDevModeLauncher.Builder builder, ResolvedDependency module, boolean root) throws Exception {
+    private void addProject(DevModeCommandLineBuilder builder, ResolvedDependency module, boolean root) throws Exception {
         if (!module.isJar()) {
             return;
         }
@@ -798,6 +1155,7 @@ public class DevMojo extends AbstractMojo {
         String projectDirectory;
         Set<Path> sourcePaths;
         String classesPath = null;
+        String generatedSourcesPath = null;
         Set<Path> resourcePaths;
         Set<Path> testSourcePaths;
         String testClassesPath = null;
@@ -864,7 +1222,11 @@ public class DevMojo extends AbstractMojo {
         Path classesDir = null;
         resourcePaths = new LinkedHashSet<>();
         if (sources != null) {
-            classesDir = sources.getSourceDirs().iterator().next().getOutputDir().toAbsolutePath();
+            SourceDir firstSourceDir = sources.getSourceDirs().iterator().next();
+            classesDir = firstSourceDir.getOutputDir().toAbsolutePath();
+            if (firstSourceDir.getAptSourcesDir() != null) {
+                generatedSourcesPath = firstSourceDir.getAptSourcesDir().toAbsolutePath().toString();
+            }
             if (Files.isDirectory(classesDir)) {
                 classesPath = classesDir.toString();
             }
@@ -917,11 +1279,19 @@ public class DevMojo extends AbstractMojo {
 
         Path targetDir = Path.of(project.getBuild().getDirectory());
 
+        // In some cases, we may have a generatedSourcesPath that has not been created, or that has been deleted
+        // after Maven created it. Javac will not be happy about it, and we will mimic Maven and auto-create it
+        // when this happens, to avoid crashing the compiler
+        if (generatedSourcesPath != null && Files.notExists(Path.of(generatedSourcesPath))) {
+            Files.createDirectories(Path.of(generatedSourcesPath));
+        }
+
         DevModeContext.ModuleInfo moduleInfo = new DevModeContext.ModuleInfo.Builder()
                 .setArtifactKey(module.getKey())
                 .setProjectDirectory(projectDirectory)
                 .setSourcePaths(PathList.from(sourcePaths))
                 .setClassesPath(classesPath)
+                .setGeneratedSourcesPath(generatedSourcesPath)
                 .setResourcesOutputPath(classesPath)
                 .setResourcePaths(PathList.from(resourcePaths))
                 .setSourceParents(PathList.of(sourceParent.toAbsolutePath()))
@@ -942,19 +1312,19 @@ public class DevMojo extends AbstractMojo {
 
     private class DevModeRunner {
 
-        final QuarkusDevModeLauncher launcher;
+        final DevModeCommandLine commandLine;
         private Process process;
 
         private DevModeRunner(String bootstrapId) throws Exception {
-            launcher = newLauncher(null, bootstrapId);
+            commandLine = newLauncher(null, bootstrapId);
         }
 
-        private DevModeRunner(Boolean debugPortOk, String bootstrapId) throws Exception {
-            launcher = newLauncher(debugPortOk, bootstrapId);
+        private DevModeRunner(String actualDebugPort, String bootstrapId) throws Exception {
+            commandLine = newLauncher(actualDebugPort, bootstrapId);
         }
 
         Collection<Path> pomFiles() {
-            return launcher.watchedBuildFiles();
+            return commandLine.getWatchedBuildFiles();
         }
 
         boolean alive() {
@@ -973,9 +1343,9 @@ public class DevMojo extends AbstractMojo {
         void run() throws Exception {
             // Display the launch command line in dev mode
             if (getLog().isDebugEnabled()) {
-                getLog().debug("Launching JVM with command line: " + String.join(" ", launcher.args()));
+                getLog().debug("Launching JVM with command line: " + String.join(" ", commandLine.getArguments()));
             }
-            final ProcessBuilder processBuilder = new ProcessBuilder(launcher.args())
+            final ProcessBuilder processBuilder = new ProcessBuilder(commandLine.getArguments())
                     .redirectErrorStream(true)
                     .inheritIO()
                     .directory(workingDir == null ? project.getBasedir() : workingDir);
@@ -985,17 +1355,15 @@ public class DevMojo extends AbstractMojo {
             process = processBuilder.start();
 
             //https://github.com/quarkusio/quarkus/issues/232
-            Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
-                @Override
-                public void run() {
-                    process.destroy();
-                    try {
-                        process.waitFor();
-                    } catch (InterruptedException e) {
-                        getLog().warn("Unable to properly wait for dev-mode end", e);
-                    }
-                }
-            }, "Development Mode Shutdown Hook"));
+            Runtime.getRuntime().addShutdownHook(new Thread(this::safeStop, "Development Mode Shutdown Hook"));
+        }
+
+        private void safeStop() {
+            try {
+                stop();
+            } catch (InterruptedException e) {
+                getLog().warn("Unable to properly wait for dev-mode end", e);
+            }
         }
 
         void stop() throws InterruptedException {
@@ -1004,7 +1372,7 @@ public class DevMojo extends AbstractMojo {
         }
     }
 
-    private QuarkusDevModeLauncher newLauncher(Boolean debugPortOk, String bootstrapId) throws Exception {
+    private DevModeCommandLine newLauncher(String actualDebugPort, String bootstrapId) throws Exception {
         String java = null;
         // See if a toolchain is configured
         if (toolchainManager != null) {
@@ -1015,31 +1383,30 @@ public class DevMojo extends AbstractMojo {
             }
         }
 
-        final MavenDevModeLauncher.Builder builder = MavenDevModeLauncher.builder(java, getLog())
-                .preventnoverify(preventnoverify)
+        final DevModeCommandLineBuilder builder = DevModeCommandLine.builder(java)
+                .forceC2(forceC2)
                 .buildDir(buildDir)
                 .outputDir(outputDirectory)
                 .suspend(suspend)
                 .debug(debug)
                 .debugHost(debugHost)
-                .debugPort(debugPort)
-                .debugPortOk(debugPortOk)
+                .debugPort(actualDebugPort)
                 .deleteDevJar(deleteDevJar);
 
         setJvmArgs(builder);
         if (windowsColorSupport) {
             builder.jvmArgs("-Dio.quarkus.force-color-support=true");
         }
+        if (test != null) {
+            builder.jvmArgs("-Dquarkus-internal.test.specific-selection=maven:" + test);
+        }
 
         if (openJavaLang) {
-            builder.jvmArgs("--add-opens");
-            builder.jvmArgs("java.base/java.lang=ALL-UNNAMED");
+            builder.addOpens("java.base/java.lang=ALL-UNNAMED");
         }
 
         if (modules != null && !modules.isEmpty()) {
-            String mods = String.join(",", this.modules);
-            builder.jvmArgs("--add-modules");
-            builder.jvmArgs(mods);
+            builder.addModules(this.modules);
         }
 
         builder.projectDir(project.getFile().getParentFile());
@@ -1053,7 +1420,8 @@ public class DevMojo extends AbstractMojo {
         }
 
         // Add other properties that may be required for expansion
-        for (String value : effectiveProperties.values()) {
+        List<String> effectivePropertyValues = new ArrayList<>(effectiveProperties.values());
+        for (String value : effectivePropertyValues) {
             for (String reference : Expression.compile(value, LENIENT_SYNTAX, NO_TRIM).getReferencedStrings()) {
                 String referenceValue = session.getUserProperties().getProperty(reference);
                 if (referenceValue != null) {
@@ -1118,6 +1486,7 @@ public class DevMojo extends AbstractMojo {
         }
 
         setKotlinSpecificFlags(builder);
+        setAnnotationProcessorFlags(builder);
 
         // path to the serialized application model
         final Path appModelLocation = resolveSerializedModelLocation();
@@ -1127,14 +1496,31 @@ public class DevMojo extends AbstractMojo {
         if (appModel != null) {
             bootstrapProvider.close();
         } else {
+            Path rootProjectDir = null;
+            String topLevelBaseDirStr = systemProperties.get(BootstrapMavenContext.MAVEN_TOP_LEVEL_PROJECT_BASEDIR);
+            if (topLevelBaseDirStr != null) {
+                final Path tmp = Path.of(topLevelBaseDirStr);
+                if (!Files.exists(tmp)) {
+                    throw new BootstrapMavenException("Top-level project base directory " + topLevelBaseDirStr
+                            + " specified with system property " + BootstrapMavenContext.MAVEN_TOP_LEVEL_PROJECT_BASEDIR
+                            + " does not exist");
+                }
+                rootProjectDir = tmp;
+            }
+
             final BootstrapMavenContextConfig<?> mvnConfig = BootstrapMavenContext.config()
+                    .setUserSettings(session.getRequest().getUserSettingsFile())
                     .setRemoteRepositories(repos)
                     .setWorkspaceDiscovery(true)
                     .setPreferPomsFromWorkspace(true)
-                    .setCurrentProject(project.getFile().toString());
+                    // it's important to set the base directory instead of the POM
+                    // which maybe manipulated by a plugin and stored outside the base directory
+                    .setCurrentProject(project.getBasedir().toString())
+                    .setEffectiveModelBuilder(BootstrapMavenContextConfig.getEffectiveModelBuilderProperty(projectProperties))
+                    .setRootProjectDir(rootProjectDir);
 
             // There are a couple of reasons we don't want to use the original Maven session:
-            // 1) a reload could be triggered by a change in a pom.xml, in which case the Maven session might not be in sync any more with the effective POM;
+            // 1) a reload could be triggered by a change in a pom.xml, in which case the Maven session might not be in sync anymore with the effective POM;
             // 2) in case there is a local module that has a snapshot version, which is also available in a remote snapshot repository,
             // the Maven resolver will be checking for newer snapshots in the remote repository and might end up resolving the artifact from there.
             final BootstrapMavenContext mvnCtx = workspaceProvider.createMavenContext(mvnConfig);
@@ -1142,8 +1528,12 @@ public class DevMojo extends AbstractMojo {
                     .setDevMode(true)
                     .setTest(LaunchMode.TEST.equals(getLaunchModeClasspath()))
                     .setCollectReloadableDependencies(!noDeps)
+                    .setLegacyModelResolver(BootstrapAppModelResolver.isLegacyModelResolver(project.getProperties()))
                     .resolveModel(mvnCtx.getCurrentProject().getAppArtifact());
         }
+
+        builder.extensionDevModeConfig(appModel.getExtensionDevModeConfig())
+                .extensionDevModeJvmOptionFilter(extensionJvmOptions);
 
         // serialize the app model to avoid re-resolving it in the dev process
         BootstrapUtils.serializeAppModel(appModel, appModelLocation);
@@ -1201,7 +1591,13 @@ public class DevMojo extends AbstractMojo {
         return builder.build();
     }
 
-    private void setJvmArgs(Builder builder) throws Exception {
+    private void debug(String msg, Object... args) {
+        if (getLog().isDebugEnabled()) {
+            getLog().debug(String.format(msg, args));
+        }
+    }
+
+    private void setJvmArgs(DevModeCommandLineBuilder builder) throws Exception {
         String jvmArgs = this.jvmArgs;
         if (!systemProperties.isEmpty()) {
             final StringBuilder buf = new StringBuilder();
@@ -1219,6 +1615,43 @@ public class DevMojo extends AbstractMojo {
 
     }
 
+    private void copySurefireVariables() {
+        if (!copySurefireVariables) {
+            return;
+        }
+
+        Plugin surefireMavenPlugin = getConfiguredPluginOrNull(ORG_APACHE_MAVEN_PLUGINS, MAVEN_SUREFIRE_PLUGIN);
+        if (surefireMavenPlugin == null) {
+            return;
+        }
+
+        ExpressionEvaluator evaluator = new PluginParameterExpressionEvaluator(session, mojoExecution);
+        Xpp3Dom config = (Xpp3Dom) surefireMavenPlugin.getConfiguration();
+        if (config != null) {
+            // we copy the maps because they can be unmodifiable
+            environmentVariables = new HashMap<>(environmentVariables);
+            copyConfiguration(config.getChild("environmentVariables"), environmentVariables, evaluator);
+            systemProperties = new HashMap<>(systemProperties);
+            copyConfiguration(config.getChild("systemPropertyVariables"), systemProperties, evaluator);
+        }
+    }
+
+    private void copyConfiguration(Xpp3Dom config, Map<String, String> targetMap, ExpressionEvaluator evaluator) {
+        if (config == null) {
+            return;
+        }
+        for (Xpp3Dom child : config.getChildren()) {
+            targetMap.computeIfAbsent(child.getName(), ignored -> {
+                try {
+                    Object value = evaluator.evaluate(child.getValue());
+                    return value == null ? null : value.toString();
+                } catch (ExpressionEvaluationException e) {
+                    throw new RuntimeException(e);
+                }
+            });
+        }
+    }
+
     private void applyCompilerFlag(Optional<Xpp3Dom> compilerPluginConfiguration, String flagName,
             Consumer<String> builderCall) {
         compilerPluginConfiguration
@@ -1229,7 +1662,7 @@ public class DevMojo extends AbstractMojo {
                 .ifPresent(builderCall);
     }
 
-    private void addQuarkusDevModeDeps(MavenDevModeLauncher.Builder builder, ApplicationModel appModel)
+    private void addQuarkusDevModeDeps(DevModeCommandLineBuilder builder, ApplicationModel appModel)
             throws MojoExecutionException, DependencyResolutionException {
 
         ResolvedDependency coreDeployment = null;
@@ -1269,21 +1702,6 @@ public class DevMojo extends AbstractMojo {
             throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing version");
         }
 
-        final List<org.eclipse.aether.graph.Dependency> managed = new ArrayList<>(
-                project.getDependencyManagement().getDependencies().size());
-        project.getDependencyManagement().getDependencies().forEach(d -> {
-            final List<Exclusion> exclusions;
-            if (!d.getExclusions().isEmpty()) {
-                exclusions = new ArrayList<>(d.getExclusions().size());
-                d.getExclusions().forEach(e -> exclusions.add(new Exclusion(e.getGroupId(), e.getArtifactId(), "*", "*")));
-            } else {
-                exclusions = List.of();
-            }
-            managed.add(new org.eclipse.aether.graph.Dependency(
-                    new DefaultArtifact(d.getGroupId(), d.getArtifactId(), d.getClassifier(), d.getType(), d.getVersion()),
-                    d.getScope(), d.isOptional(), exclusions));
-        });
-
         final DefaultArtifact devModeJar = new DefaultArtifact(devModeGroupId, devModeArtifactId, ArtifactCoords.TYPE_JAR,
                 devModeVersion);
         final DependencyResult cpRes = repoSystem.resolveDependencies(repoSession,
@@ -1293,7 +1711,7 @@ public class DevMojo extends AbstractMojo {
                                         // it doesn't matter what the root artifact is, it's an alias
                                         .setRootArtifact(new DefaultArtifact(IO_QUARKUS, "quarkus-devmode-alias",
                                                 ArtifactCoords.TYPE_JAR, "1.0"))
-                                        .setManagedDependencies(managed)
+                                        .setManagedDependencies(getProjectAetherDependencyManagement())
                                         .setDependencies(List.of(
                                                 new org.eclipse.aether.graph.Dependency(devModeJar, JavaScopes.RUNTIME),
                                                 new org.eclipse.aether.graph.Dependency(new DefaultArtifact(
@@ -1319,15 +1737,26 @@ public class DevMojo extends AbstractMojo {
         }
     }
 
-    private void setKotlinSpecificFlags(MavenDevModeLauncher.Builder builder) {
-        Plugin kotlinMavenPlugin = null;
-        for (Plugin plugin : project.getBuildPlugins()) {
-            if (plugin.getArtifactId().equals(KOTLIN_MAVEN_PLUGIN) && plugin.getGroupId().equals(ORG_JETBRAINS_KOTLIN)) {
-                kotlinMavenPlugin = plugin;
-                break;
+    private List<org.eclipse.aether.graph.Dependency> getProjectAetherDependencyManagement() {
+        final List<org.eclipse.aether.graph.Dependency> managed = new ArrayList<>(
+                project.getDependencyManagement().getDependencies().size());
+        project.getDependencyManagement().getDependencies().forEach(d -> {
+            final List<Exclusion> exclusions;
+            if (!d.getExclusions().isEmpty()) {
+                exclusions = new ArrayList<>(d.getExclusions().size());
+                d.getExclusions().forEach(e -> exclusions.add(new Exclusion(e.getGroupId(), e.getArtifactId(), "*", "*")));
+            } else {
+                exclusions = List.of();
             }
-        }
+            managed.add(new org.eclipse.aether.graph.Dependency(
+                    new DefaultArtifact(d.getGroupId(), d.getArtifactId(), d.getClassifier(), d.getType(), d.getVersion()),
+                    d.getScope(), d.isOptional(), exclusions));
+        });
+        return managed;
+    }
 
+    private void setKotlinSpecificFlags(DevModeCommandLineBuilder builder) {
+        Plugin kotlinMavenPlugin = getConfiguredPluginOrNull(ORG_JETBRAINS_KOTLIN, KOTLIN_MAVEN_PLUGIN);
         if (kotlinMavenPlugin == null) {
             return;
         }
@@ -1365,18 +1794,41 @@ public class DevMojo extends AbstractMojo {
         builder.compilerPluginOptions(options);
     }
 
-    protected void modifyDevModeContext(MavenDevModeLauncher.Builder builder) {
+    private void setAnnotationProcessorFlags(DevModeCommandLineBuilder builder) {
+        Plugin compilerMavenPlugin = getConfiguredPluginOrNull(ORG_APACHE_MAVEN_PLUGINS, MAVEN_COMPILER_PLUGIN);
+        if (compilerMavenPlugin == null) {
+            return;
+        }
+
+        getLog().debug("Maven compiler plugin found, looking for annotation processors");
+
+        List<String> options = new ArrayList<>();
+        Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) compilerMavenPlugin.getConfiguration();
+        try {
+            Set<File> processorPaths = this.readAnnotationProcessorPaths(compilerPluginConfiguration);
+            getLog().debug("Found processor paths: " + processorPaths);
+            if (!processorPaths.isEmpty()) {
+                builder.annotationProcessorPaths(processorPaths);
+            }
+        } catch (MojoExecutionException e) {
+            throw new RuntimeException(e);
+        }
+        List<String> processors = this.readAnnotationProcessors(compilerPluginConfiguration);
+        getLog().debug("Found processors: " + processors);
+        if (!processors.isEmpty()) {
+            builder.annotationProcessors(processors);
+        }
+        builder.compilerPluginOptions(options);
+    }
+
+    protected void modifyDevModeContext(DevModeCommandLineBuilder builder) {
 
     }
 
     private Optional<Xpp3Dom> findCompilerPluginConfiguration() {
-        for (final Plugin plugin : project.getBuildPlugins()) {
-            if (plugin.getArtifactId().equals(MAVEN_COMPILER_PLUGIN) && plugin.getGroupId().equals(ORG_APACHE_MAVEN_PLUGINS)) {
-                final Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
-                if (compilerPluginConfiguration != null) {
-                    return Optional.of(compilerPluginConfiguration);
-                }
-            }
+        Plugin plugin = getConfiguredPluginOrNull(ORG_APACHE_MAVEN_PLUGINS, MAVEN_COMPILER_PLUGIN);
+        if (plugin != null) {
+            return Optional.ofNullable((Xpp3Dom) plugin.getConfiguration());
         }
         return Optional.empty();
     }
