@@ -1,13 +1,12 @@
 package io.quarkus.cache.runtime.caffeine;
 
 import java.time.Duration;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
+import java.util.concurrent.Executor;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -26,6 +25,10 @@ import io.quarkus.cache.CaffeineCache;
 import io.quarkus.cache.runtime.AbstractCache;
 import io.quarkus.cache.runtime.NullValueConverter;
 import io.smallrye.mutiny.Uni;
+import io.vertx.core.Context;
+import io.vertx.core.Handler;
+import io.vertx.core.Vertx;
+import io.vertx.core.impl.ContextInternal;
 
 /**
  * This class is an internal Quarkus cache implementation using Caffeine. Do not use it explicitly from your Quarkus
@@ -99,6 +102,7 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
     @Override
     public <K, V> Uni<V> getAsync(K key, Function<K, Uni<V>> valueLoader) {
         Objects.requireNonNull(key, NULL_KEYS_NOT_SUPPORTED_MSG);
+        Context context = Vertx.currentContext();
         return Uni.createFrom()
                 .completionStage(new Supplier<CompletionStage<V>>() {
                     @Override
@@ -119,7 +123,51 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
                         recorder.doRecord(key);
                         return result;
                     }
-                }).map(fromCacheValue());
+                })
+                .map(fromCacheValue())
+                .emitOn(new Executor() {
+                    // We need make sure we go back to the original context when the cache value is computed.
+                    // Otherwise, we would always emit on the context having computed the value, which could
+                    // break the duplicated context isolation.
+                    @Override
+                    public void execute(Runnable command) {
+                        Context ctx = Vertx.currentContext();
+                        if (context == null) {
+                            // We didn't capture a context
+                            if (ctx == null) {
+                                // We are not on a context => we can execute immediately.
+                                command.run();
+                            } else {
+                                // We are on a context.
+                                // We cannot continue on the current context as we may share a duplicated context.
+                                // We need a new one. Note that duplicate() does not duplicate the duplicated context,
+                                // but the root context.
+                                ((ContextInternal) ctx).duplicate()
+                                        .runOnContext(new Handler<Void>() {
+                                            @Override
+                                            public void handle(Void ignored) {
+                                                command.run();
+                                            }
+                                        });
+                            }
+                        } else {
+                            // We captured a context.
+                            if (ctx == context) {
+                                // We are on the same context => we can execute immediately
+                                command.run();
+                            } else {
+                                // 1) We are not on a context (ctx == null) => we need to switch to the captured context.
+                                // 2) We are on a different context (ctx != null) => we need to switch to the captured context.
+                                context.runOnContext(new Handler<Void>() {
+                                    @Override
+                                    public void handle(Void ignored) {
+                                        command.run();
+                                    }
+                                });
+                            }
+                        }
+                    }
+                });
     }
 
     @Override
@@ -127,13 +175,10 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
         Objects.requireNonNull(key, NULL_KEYS_NOT_SUPPORTED_MSG);
         CompletableFuture<Object> existingCacheValue = cache.getIfPresent(key);
 
-        // record metrics, if not null apply casting
         if (existingCacheValue == null) {
-            statsCounter.recordMisses(1);
             return null;
         } else {
             LOGGER.tracef("Key [%s] found in cache [%s]", key, cacheInfo.name);
-            statsCounter.recordHits(1);
 
             // cast, but still throw the CacheException in case it fails
             return unwrapCacheValueOrThrowable(existingCacheValue)
@@ -204,7 +249,7 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
     @Override
     public Uni<Void> invalidate(Object key) {
         Objects.requireNonNull(key, NULL_KEYS_NOT_SUPPORTED_MSG);
-        return Uni.createFrom().item(new Supplier<Void>() {
+        return Uni.createFrom().item(new Supplier<>() {
             @Override
             public Void get() {
                 cache.synchronous().invalidate(key);
@@ -215,7 +260,7 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
 
     @Override
     public Uni<Void> invalidateAll() {
-        return Uni.createFrom().item(new Supplier<Void>() {
+        return Uni.createFrom().item(new Supplier<>() {
             @Override
             public Void get() {
                 cache.synchronous().invalidateAll();
@@ -226,7 +271,7 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
 
     @Override
     public Uni<Void> invalidateIf(Predicate<Object> predicate) {
-        return Uni.createFrom().item(new Supplier<Void>() {
+        return Uni.createFrom().item(new Supplier<>() {
             @Override
             public Void get() {
                 cache.asMap().keySet().removeIf(predicate);
@@ -237,7 +282,7 @@ public class CaffeineCacheImpl extends AbstractCache implements CaffeineCache {
 
     @Override
     public Set<Object> keySet() {
-        return Collections.unmodifiableSet(new HashSet<>(cache.asMap().keySet()));
+        return Set.copyOf(cache.asMap().keySet());
     }
 
     @SuppressWarnings("unchecked")
