@@ -3,21 +3,41 @@ package io.quarkus.devservices.common;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.util.Collections;
+import java.lang.reflect.Field;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Consumer;
 
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.Network;
 import org.testcontainers.utility.Base58;
+
+import com.github.dockerjava.api.command.CreateNetworkCmd;
 
 public final class ConfigureUtil {
 
     private static final Map<String, Properties> DEVSERVICES_PROPS = new ConcurrentHashMap<>();
 
     private ConfigureUtil() {
+    }
+
+    public static String configureNetwork(GenericContainer<?> container,
+            String defaultNetworkId,
+            boolean useSharedNetwork,
+            String hostNamePrefix) {
+        if (defaultNetworkId != null) {
+            // Set the network`without creating the network
+            container.setNetworkMode(defaultNetworkId);
+            return setGeneratedHostname(container, hostNamePrefix);
+        } else if (useSharedNetwork) {
+            return configureSharedNetwork(container, hostNamePrefix);
+        }
+        return container.getHost();
     }
 
     public static String configureSharedNetwork(GenericContainer<?> container, String hostNamePrefix) {
@@ -34,6 +54,12 @@ public final class ConfigureUtil {
                 Class<?> networkClass = tccl.getParent()
                         .loadClass("org.testcontainers.containers.Network");
                 Object sharedNetwork = networkClass.getField("SHARED").get(null);
+                Consumer<CreateNetworkCmd> addDevservicesLabel = cmd -> cmd
+                        .withLabels(Map.of("quarkus.devservices.network", "shared"));
+                Field createNetworkCmdModifiersField = sharedNetwork.getClass().getSuperclass()
+                        .getDeclaredField("createNetworkCmdModifiers");
+                createNetworkCmdModifiersField.setAccessible(true);
+                createNetworkCmdModifiersField.set(sharedNetwork, Set.of(addDevservicesLabel));
                 container.setNetwork((Network) sharedNetwork);
             } catch (Exception e) {
                 throw new IllegalStateException("Unable to obtain SHARED network from testcontainers", e);
@@ -41,9 +67,13 @@ public final class ConfigureUtil {
         } else {
             container.setNetwork(Network.SHARED);
         }
+        return setGeneratedHostname(container, hostNamePrefix);
+    }
 
+    public static String setGeneratedHostname(GenericContainer<?> container, String hostNamePrefix) {
         String hostName = (hostNamePrefix + "-" + Base58.randomString(5)).toLowerCase(Locale.ROOT);
-        container.setNetworkAliases(Collections.singletonList(hostName));
+        // some containers might try to add their own aliases on start, so we want to keep this list modifiable:
+        container.setNetworkAliases(new ArrayList<>(List.of(hostName)));
 
         return hostName;
     }
