@@ -1,6 +1,6 @@
-
 package io.quarkus.kubernetes.deployment;
 
+import static io.quarkus.kubernetes.deployment.Constants.INGRESS;
 import static io.quarkus.kubernetes.deployment.Constants.KUBERNETES;
 import static io.quarkus.kubernetes.deployment.Constants.LIVENESS_PROBE;
 import static io.quarkus.kubernetes.deployment.Constants.MAX_NODE_PORT_VALUE;
@@ -19,13 +19,15 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.dekorate.kubernetes.annotation.ServiceType;
 import io.dekorate.kubernetes.config.EnvBuilder;
+import io.dekorate.kubernetes.config.IngressRuleBuilder;
 import io.dekorate.kubernetes.config.Port;
+import io.dekorate.kubernetes.decorator.AddAnnotationDecorator;
 import io.dekorate.kubernetes.decorator.AddEnvVarDecorator;
+import io.dekorate.kubernetes.decorator.AddIngressRuleDecorator;
 import io.dekorate.kubernetes.decorator.ApplicationContainerDecorator;
 import io.dekorate.kubernetes.decorator.ApplyImagePullPolicyDecorator;
 import io.dekorate.project.Project;
@@ -39,8 +41,10 @@ import io.quarkus.kubernetes.client.spi.KubernetesClientCapabilityBuildItem;
 import io.quarkus.kubernetes.spi.CustomProjectRootBuildItem;
 import io.quarkus.kubernetes.spi.DecoratorBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesAnnotationBuildItem;
+import io.quarkus.kubernetes.spi.KubernetesClusterRoleBindingBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesClusterRoleBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesCommandBuildItem;
+import io.quarkus.kubernetes.spi.KubernetesEffectiveServiceAccountBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesEnvBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesHealthLivenessPathBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesHealthReadinessPathBuildItem;
@@ -48,29 +52,33 @@ import io.quarkus.kubernetes.spi.KubernetesHealthStartupPathBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesInitContainerBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesJobBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesLabelBuildItem;
+import io.quarkus.kubernetes.spi.KubernetesNamespaceBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesPortBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesProbePortNameBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesRoleBindingBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesRoleBuildItem;
-import io.quarkus.kubernetes.spi.KubernetesServiceAccountBuildItem;
+import io.quarkus.kubernetes.spi.Targetable;
 
 public class DevClusterHelper {
 
     public static final String DEFAULT_HASH_ALGORITHM = "SHA-256";
 
+    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
     public static List<DecoratorBuildItem> createDecorators(String clusterKind,
+            String deploymentTarget,
             ApplicationInfoBuildItem applicationInfo,
             OutputTargetBuildItem outputTarget,
             KubernetesConfig config,
             PackageConfig packageConfig,
             Optional<MetricsCapabilityBuildItem> metricsConfiguration,
             Optional<KubernetesClientCapabilityBuildItem> kubernetesClientConfiguration,
+            List<KubernetesNamespaceBuildItem> namespaces,
             List<KubernetesInitContainerBuildItem> initContainers,
             List<KubernetesJobBuildItem> jobs,
             List<KubernetesAnnotationBuildItem> annotations,
             List<KubernetesLabelBuildItem> labels,
             List<KubernetesEnvBuildItem> envs,
-            Optional<BaseImageInfoBuildItem> baseImage,
+            @Deprecated Optional<BaseImageInfoBuildItem> baseImage,
             Optional<ContainerImageInfoBuildItem> image,
             Optional<KubernetesCommandBuildItem> command,
             List<KubernetesPortBuildItem> ports,
@@ -80,73 +88,93 @@ public class DevClusterHelper {
             Optional<KubernetesHealthStartupPathBuildItem> startupPath,
             List<KubernetesRoleBuildItem> roles,
             List<KubernetesClusterRoleBuildItem> clusterRoles,
-            List<KubernetesServiceAccountBuildItem> serviceAccounts,
+            List<KubernetesEffectiveServiceAccountBuildItem> serviceAccounts,
             List<KubernetesRoleBindingBuildItem> roleBindings,
+            List<KubernetesClusterRoleBindingBuildItem> clusterRoleBindings,
             Optional<CustomProjectRootBuildItem> customProjectRoot) {
 
-        List<DecoratorBuildItem> result = new ArrayList<>();
         String name = ResourceNameUtil.getResourceName(config, applicationInfo);
+        final var namespace = Targetable.filteredByTarget(namespaces, deploymentTarget, true)
+                .findFirst();
 
         Optional<Project> project = KubernetesCommonHelper.createProject(applicationInfo, customProjectRoot, outputTarget,
                 packageConfig);
         Optional<Port> port = KubernetesCommonHelper.getPort(ports, config);
-        result.addAll(KubernetesCommonHelper.createDecorators(project, clusterKind, name, config,
-                metricsConfiguration, kubernetesClientConfiguration,
-                annotations, labels, command,
-                port, livenessPath, readinessPath, startupPath, roles, clusterRoles, serviceAccounts, roleBindings));
 
-        image.ifPresent(i -> {
-            result.add(new DecoratorBuildItem(clusterKind, new ApplyContainerImageDecorator(name, i.getImage())));
-        });
+        List<DecoratorBuildItem> result = new ArrayList<>(
+                KubernetesCommonHelper.createDecorators(project, clusterKind, name, namespace, config,
+                        metricsConfiguration, kubernetesClientConfiguration,
+                        annotations, labels, image, command,
+                        port, livenessPath, readinessPath, startupPath, roles, clusterRoles, serviceAccounts, roleBindings,
+                        clusterRoleBindings));
 
-        Stream.concat(config.convertToBuildItems().stream(),
-                envs.stream().filter(e -> e.getTarget() == null || KUBERNETES.equals(e.getTarget()))).forEach(e -> {
-                    result.add(new DecoratorBuildItem(clusterKind,
-                            new AddEnvVarDecorator(ApplicationContainerDecorator.ANY, name, new EnvBuilder()
-                                    .withName(EnvConverter.convertName(e.getName()))
-                                    .withValue(e.getValue())
-                                    .withSecret(e.getSecret())
-                                    .withConfigmap(e.getConfigMap())
-                                    .withField(e.getField())
-                                    .build())));
-                });
+        image.ifPresent(
+                i -> result.add(new DecoratorBuildItem(clusterKind, new ApplyContainerImageDecorator(name, i.getImage()))));
+
+        Stream.concat(config.convertToBuildItems().stream(), Targetable.filteredByTarget(envs, KUBERNETES))
+                .forEach(e -> result.add(new DecoratorBuildItem(clusterKind,
+                        new AddEnvVarDecorator(ApplicationContainerDecorator.ANY, name, new EnvBuilder()
+                                .withName(EnvConverter.convertName(e.getName()))
+                                .withValue(e.getValue())
+                                .withSecret(e.getSecret())
+                                .withConfigmap(e.getConfigMap())
+                                .withField(e.getField())
+                                .withPrefix(e.getPrefix())
+                                .build()))));
 
         result.add(new DecoratorBuildItem(clusterKind, new ApplyImagePullPolicyDecorator(name, "IfNotPresent")));
 
         //Service handling
         result.add(new DecoratorBuildItem(clusterKind, new ApplyServiceTypeDecorator(name, ServiceType.NodePort.name())));
-        List<Map.Entry<String, PortConfig>> nodeConfigPorts = config.getPorts().entrySet().stream()
-                .filter(e -> e.getValue().nodePort.isPresent())
-                .collect(Collectors.toList());
+        List<Map.Entry<String, PortConfig>> nodeConfigPorts = config.ports().entrySet().stream()
+                .filter(e -> e.getValue().nodePort().isPresent())
+                .toList();
         if (!nodeConfigPorts.isEmpty()) {
             for (Map.Entry<String, PortConfig> entry : nodeConfigPorts) {
                 result.add(new DecoratorBuildItem(KUBERNETES,
-                        new AddNodePortDecorator(name, entry.getValue().nodePort.getAsInt(), entry.getKey())));
+                        new AddNodePortDecorator(name, entry.getValue().nodePort().getAsInt(), entry.getKey())));
             }
         } else {
             result.add(new DecoratorBuildItem(clusterKind,
                     new AddNodePortDecorator(name,
-                            config.getNodePort().orElseGet(
+                            config.nodePort().orElseGet(
                                     () -> getStablePortNumberInRange(name, MIN_NODE_PORT_VALUE, MAX_NODE_PORT_VALUE)),
-                            config.ingress.targetPort)));
+                            config.ingress().targetPort())));
         }
 
         //Probe port handling
         result.add(
-                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, LIVENESS_PROBE, config.livenessProbe,
+                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, LIVENESS_PROBE, config.livenessProbe(),
                         portName,
                         ports,
-                        config.ports));
+                        config.ports()));
         result.add(
-                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, READINESS_PROBE, config.readinessProbe,
+                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, READINESS_PROBE, config.readinessProbe(),
                         portName,
                         ports,
-                        config.ports));
+                        config.ports()));
         result.add(
-                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, STARTUP_PROBE, config.startupProbe,
+                KubernetesCommonHelper.createProbeHttpPortDecorator(name, clusterKind, STARTUP_PROBE, config.startupProbe(),
                         portName,
                         ports,
-                        config.ports));
+                        config.ports()));
+
+        for (Map.Entry<String, String> annotation : config.ingress().annotations().entrySet()) {
+            result.add(new DecoratorBuildItem(clusterKind,
+                    new AddAnnotationDecorator(name, annotation.getKey(), annotation.getValue(), INGRESS)));
+        }
+
+        for (IngressConfig.IngressRuleConfig rule : config.ingress().rules().values()) {
+            result.add(new DecoratorBuildItem(clusterKind, new AddIngressRuleDecorator(name, port,
+                    new IngressRuleBuilder()
+                            .withHost(rule.host())
+                            .withPath(rule.path())
+                            .withPathType(rule.pathType())
+                            .withServiceName(rule.serviceName().orElse(null))
+                            .withServicePortName(rule.servicePortName().orElse(null))
+                            .withServicePortNumber(rule.servicePortNumber().orElse(-1))
+                            .build())));
+        }
 
         // Handle init Containers
         result.addAll(KubernetesCommonHelper.createInitContainerDecorators(clusterKind, name, initContainers, result));
@@ -154,9 +182,9 @@ public class DevClusterHelper {
 
         // Do not bind the Management port to the Service resource unless it's explicitly used by the user.
         if (managementPortIsEnabled()
-                && (config.ingress == null
-                        || !config.ingress.expose
-                        || !config.ingress.targetPort.equals(MANAGEMENT_PORT_NAME))) {
+                && (config.ingress() == null
+                        || !config.ingress().expose()
+                        || !config.ingress().targetPort().equals(MANAGEMENT_PORT_NAME))) {
             result.add(new DecoratorBuildItem(clusterKind, new RemovePortFromServiceDecorator(name, MANAGEMENT_PORT_NAME)));
         }
         return result;
