@@ -6,7 +6,7 @@ import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
@@ -18,10 +18,61 @@ import io.quarkus.fs.util.ZipUtils;
 
 public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
 
-    private final Path archive;
+    private static final String DISABLE_JAR_CACHE_PROPERTY = "quarkus.bootstrap.disable-jar-cache";
+    private static final boolean ENABLE_SHARING = !Boolean.getBoolean(DISABLE_JAR_CACHE_PROPERTY);
+
+    /**
+     * Returns an instance of {@link ArchivePathTree} for the {@code path} either from a cache
+     * if sharing is enabled or a new instance.
+     *
+     * @param path path to an archive
+     * @return instance of {@link ArchivePathTree}, never null
+     */
+    static ArchivePathTree forPath(Path path) {
+        return forPath(path, null, true);
+    }
+
+    /**
+     * Caching of archive path trees with {@link PathFilter}'s isn't currently supported.
+     * If {@code filter} argument is not null, the method will return a non-cacheable implementation
+     * of {@link ArchivePathTree}.
+     * <p>
+     * Otherwise, the method returns an instance of {@link ArchivePathTree} for the {@code path} either from a cache
+     * if sharing is enabled or a new instance.
+     *
+     * @param path path to an archive
+     * @param filter filter to apply
+     * @return instance of {@link ArchivePathTree}, never null
+     */
+    static ArchivePathTree forPath(Path path, PathFilter filter) {
+        return forPath(path, filter, true);
+    }
+
+    /**
+     * Caching of archive path trees with {@link PathFilter}'s isn't currently supported.
+     * If {@code filter} argument is not null, the method will return a non-cacheable implementation
+     * of {@link ArchivePathTree}.
+     * <p>
+     * Otherwise, the method returns an instance of {@link ArchivePathTree} for the {@code path} either from a cache
+     * if sharing is enabled or a new instance.
+     *
+     * @param path path to an archive
+     * @param filter filter to apply
+     * @param manifestEnabled if reading the manifest is enabled, always true if sharing is enabled
+     * @return instance of {@link ArchivePathTree}, never null
+     */
+    static ArchivePathTree forPath(Path path, PathFilter filter, boolean manifestEnabled) {
+        if (filter != null || !ENABLE_SHARING) {
+            return new ArchivePathTree(path, filter, manifestEnabled);
+        }
+
+        return SharedArchivePathTree.forPath(path);
+    }
+
+    protected final Path archive;
     private final PathFilter pathFilter;
 
-    public ArchivePathTree(Path archive) {
+    ArchivePathTree(Path archive) {
         this(archive, null);
     }
 
@@ -36,15 +87,38 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
     }
 
     @Override
+    public boolean isArchiveOrigin() {
+        return true;
+    }
+
+    @Override
     public Collection<Path> getRoots() {
-        return Collections.singletonList(archive);
+        return List.of(archive);
     }
 
     @Override
     public void walk(PathVisitor visitor) {
         try (FileSystem fs = openFs()) {
             final Path dir = fs.getPath("/");
-            PathTreeVisit.walk(archive, dir, pathFilter, getMultiReleaseMapping(), visitor);
+            PathTreeVisit.walk(archive, dir, dir, pathFilter, getMultiReleaseMapping(), visitor);
+        } catch (IOException e) {
+            throw new UncheckedIOException("Failed to read " + archive, e);
+        }
+    }
+
+    @Override
+    public void walkIfContains(String relativePath, PathVisitor visitor) {
+        ensureResourcePath(relativePath);
+        if (!PathFilter.isVisible(pathFilter, relativePath)) {
+            return;
+        }
+        try (FileSystem fs = openFs()) {
+            for (Path root : fs.getRootDirectories()) {
+                final Path walkDir = root.resolve(relativePath);
+                if (Files.exists(walkDir)) {
+                    PathTreeVisit.walk(archive, root, walkDir, pathFilter, getMultiReleaseMapping(), visitor);
+                }
+            }
         } catch (IOException e) {
             throw new UncheckedIOException("Failed to read " + archive, e);
         }
@@ -124,7 +198,7 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
         return false;
     }
 
-    private FileSystem openFs() throws IOException {
+    protected FileSystem openFs() throws IOException {
         return ZipUtils.newFileSystem(archive);
     }
 
@@ -155,14 +229,48 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
                 && manifestEnabled == other.manifestEnabled;
     }
 
-    private class OpenArchivePathTree extends DirectoryPathTree {
+    @Override
+    public String toString() {
+        return archive.toString();
+    }
 
-        private final FileSystem fs;
+    protected class OpenArchivePathTree extends OpenContainerPathTree {
+
         private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
 
-        private OpenArchivePathTree(FileSystem fs) {
-            super(fs.getPath("/"), pathFilter, ArchivePathTree.this);
+        // we don't make these fields final as we want to nullify them on close
+        private FileSystem fs;
+        private Path rootPath;
+
+        private volatile boolean open = true;
+
+        protected OpenArchivePathTree(FileSystem fs) {
+            super(ArchivePathTree.this.pathFilter, ArchivePathTree.this);
             this.fs = fs;
+            this.rootPath = fs.getPath("/");
+        }
+
+        @Override
+        public boolean isArchiveOrigin() {
+            return true;
+        }
+
+        @Override
+        protected Path getContainerPath() {
+            return ArchivePathTree.this.archive;
+        }
+
+        @Override
+        protected Path getRootPath() {
+            return rootPath;
+        }
+
+        protected ReentrantReadWriteLock.ReadLock readLock() {
+            return lock.readLock();
+        }
+
+        protected ReentrantReadWriteLock.WriteLock writeLock() {
+            return lock.writeLock();
         }
 
         @Override
@@ -192,7 +300,12 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
 
         @Override
         public boolean isOpen() {
-            return fs.isOpen();
+            lock.readLock().lock();
+            try {
+                return open;
+            } finally {
+                lock.readLock().unlock();
+            }
         }
 
         @Override
@@ -229,6 +342,17 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
         }
 
         @Override
+        public void walkIfContains(String relativePath, PathVisitor visitor) {
+            lock.readLock().lock();
+            try {
+                ensureOpen();
+                super.walkIfContains(relativePath, visitor);
+            } finally {
+                lock.readLock().unlock();
+            }
+        }
+
+        @Override
         public boolean contains(String relativePath) {
             lock.readLock().lock();
             try {
@@ -250,8 +374,12 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
             }
         }
 
+        /**
+         * Make sure you use this method inside a lock.
+         */
         private void ensureOpen() {
-            if (isOpen()) {
+            // let's not use isOpen() as ensureOpen() is always used inside a read lock
+            if (open) {
                 return;
             }
             throw new RuntimeException("Failed to access " + ArchivePathTree.this.getRoots()
@@ -260,22 +388,18 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
 
         @Override
         public void close() throws IOException {
-            Throwable t = null;
             lock.writeLock().lock();
             try {
-                super.close();
-            } catch (Throwable e) {
-                t = e;
+                open = false;
+                rootPath = null;
+                fs.close();
+            } catch (IOException e) {
                 throw e;
             } finally {
-                try {
-                    fs.close();
-                } catch (IOException e) {
-                    if (t != null) {
-                        e.addSuppressed(t);
-                    }
-                    throw e;
-                }
+                // even when we close the fs, everything is kept as is in the fs instance
+                // and typically the cen, which is quite large
+                // let's make sure the fs is nullified for it to be garbage collected
+                fs = null;
                 lock.writeLock().unlock();
             }
         }
@@ -283,6 +407,11 @@ public class ArchivePathTree extends PathTreeWithManifest implements PathTree {
         @Override
         public PathTree getOriginalTree() {
             return ArchivePathTree.this;
+        }
+
+        @Override
+        public String toString() {
+            return ArchivePathTree.this.toString();
         }
     }
 }
