@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
-import java.util.function.Supplier;
 
 import org.apache.maven.model.DependencyManagement;
 import org.apache.maven.model.Model;
@@ -15,7 +14,6 @@ import org.apache.maven.model.Profile;
 import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.maven.dependency.ArtifactKey;
 import io.quarkus.maven.dependency.GACT;
-import io.quarkus.maven.dependency.GACTV;
 
 /**
  *
@@ -50,6 +48,10 @@ public class TsArtifact {
         return new TsArtifact(DEFAULT_GROUP_ID, artifactId, EMPTY, TYPE_JAR, version);
     }
 
+    public static TsArtifact jar(String groupId, String artifactId, String version) {
+        return new TsArtifact(groupId, artifactId, EMPTY, TYPE_JAR, version);
+    }
+
     public static TsArtifact pom(String artifactId) {
         return new TsArtifact(DEFAULT_GROUP_ID, artifactId, EMPTY, TYPE_POM, DEFAULT_VERSION);
     }
@@ -79,7 +81,7 @@ public class TsArtifact {
     protected ContentProvider content;
 
     protected Properties pomProps;
-    protected List<Profile> pomProfiles = Collections.emptyList();
+    protected List<Profile> pomProfiles = List.of();
 
     private boolean installed;
 
@@ -136,6 +138,10 @@ public class TsArtifact {
         return addDependency(new TsDependency(dep));
     }
 
+    public TsArtifact addDependency(TsArtifact dep, boolean optional) {
+        return addDependency(new TsDependency(dep, optional));
+    }
+
     public TsArtifact addDependency(TsArtifact dep, TsArtifact... excludes) {
         return addDependency(new TsDependency(dep).exclude(excludes));
     }
@@ -149,23 +155,23 @@ public class TsArtifact {
     }
 
     public TsArtifact addDependency(TsQuarkusExt dep, boolean optional) {
-        return addDependency(dep, () -> new TsDependency(dep.getRuntime(), optional));
+        return addDependency(dep, new TsDependency(dep.getRuntime(), optional));
     }
 
     public TsArtifact addDependency(TsQuarkusExt dep, String scope, boolean optional) {
-        return addDependency(dep, () -> new TsDependency(dep.getRuntime(), scope, optional));
+        return addDependency(dep, new TsDependency(dep.getRuntime(), scope, optional));
     }
 
     public TsArtifact addDependency(TsQuarkusExt dep, TsArtifact... excludes) {
-        return addDependency(dep, () -> new TsDependency(dep.getRuntime(), false).exclude(excludes));
+        return addDependency(dep, new TsDependency(dep.getRuntime(), false).exclude(excludes));
     }
 
-    private TsArtifact addDependency(TsQuarkusExt dep, Supplier<TsDependency> dependencyFactory) {
+    private TsArtifact addDependency(TsQuarkusExt extDep, TsDependency dep) {
         if (extDeps.isEmpty()) {
             extDeps = new ArrayList<>(1);
         }
-        extDeps.add(dep);
-        return addDependency(dependencyFactory.get());
+        extDeps.add(extDep);
+        return addDependency(dep);
     }
 
     public TsArtifact addDependency(TsDependency dep) {
@@ -174,6 +180,37 @@ public class TsArtifact {
         }
         deps.add(dep);
         return this;
+    }
+
+    /**
+     * Adds a dependency as the first in the list.
+     *
+     * @param dep dependency to add
+     * @return this artifact
+     */
+    public TsArtifact addFirstDependency(TsDependency dep) {
+        if (deps.isEmpty()) {
+            deps = new ArrayList<>();
+            deps.add(dep);
+        } else {
+            deps.add(dep);
+            Collections.rotate(deps, 1);
+        }
+        return this;
+    }
+
+    /**
+     * Adds a dependency as the first in the list.
+     *
+     * @param dep dependency to add
+     * @return this artifact
+     */
+    public TsArtifact addFirstDependency(TsArtifact dep) {
+        return addFirstDependency(new TsDependency(dep));
+    }
+
+    public TsArtifact addManagedDependency(TsArtifact a) {
+        return addManagedDependency(new TsDependency(a));
     }
 
     public TsArtifact addManagedDependency(TsDependency dep) {
@@ -235,9 +272,10 @@ public class TsArtifact {
         }
 
         if (!managedDeps.isEmpty()) {
-            model.setDependencyManagement(new DependencyManagement());
+            var dm = new DependencyManagement();
+            model.setDependencyManagement(dm);
             for (TsDependency dep : managedDeps) {
-                model.getDependencyManagement().addDependency(dep.toPomDependency());
+                dm.addDependency(dep.toPomDependency());
             }
         }
 
@@ -248,7 +286,7 @@ public class TsArtifact {
     }
 
     public ArtifactCoords toArtifact() {
-        return new GACTV(groupId, artifactId, classifier, type, version);
+        return ArtifactCoords.of(groupId, artifactId, classifier, type, version);
     }
 
     /**
